--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>news-point</title>
+        <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPqEEI_x50vlET-ur5DsLdnNmprdM-L9HTUw&s" type="image/*">
         <link href="./src/output.css" rel="stylesheet">
         <link href="./src/index.css" rel="stylesheet">
     </head>
@@ -93,7 +94,7 @@
 
             <!-- footer section -->
             <div class="footer h-[9%] bg-gray-800 flex justify-center">
-                <h1 class=" relative top-5 text-lg text-white ">-----power by @RAVI KARAN------- </h1>
+                <h1 class=" relative top-5 text-lg text-white ">-----  power by @RAVI KARAN  ------- </h1>
             </div>
         </div>
         <script src="./script/index.js"></script>
