--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>news-point</title>
-        <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPqEEI_x50vlET-ur5DsLdnNmprdM-L9HTUw&s" type="image/*">
+        <link rel="icon"
+            href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPqEEI_x50vlET-ur5DsLdnNmprdM-L9HTUw&s"
+            type="image/*">
         <link href="./src/output.css" rel="stylesheet">
         <link href="./src/index.css" rel="stylesheet">
     </head>
@@ -21,6 +23,10 @@
 
                     <!-- Nav Button Section -->
                     <div class="flex space-x-7 nav-items">
+                        <div data-value="top"
+                            class="text-white nav-item hover:text-yellow-300 transition duration-300 cursor-pointer">
+                            TOP
+                        </div>
                         <div data-value="business"
                             class="text-white nav-item hover:text-yellow-300 transition duration-300 cursor-pointer">
                             business
@@ -28,6 +34,10 @@
                         <div data-value="entertainment"
                             class="text-white nav-item hover:text-yellow-300 transition duration-300 cursor-pointer">
                             entertainment
+                        </div>
+                        <div data-value="food"
+                            class="text-white nav-item hover:text-yellow-300 transition duration-300 cursor-pointer">
+                            food
                         </div>
                         <div data-value="science"
                             class="text-white nav-item hover:text-yellow-300 transition duration-300 cursor-pointer">
@@ -41,9 +51,9 @@
                             class="text-white nav-item hover:text-yellow-300 transition duration-300 cursor-pointer">
                             technology
                         </div>
-                        <div data-value="general"
+                        <div data-value="politics"
                             class="text-white nav-item hover:text-yellow-300 transition duration-300 cursor-pointer">
-                            general
+                            politics
                         </div>
                         <div data-value="health"
                             class="text-white nav-item hover:text-yellow-300 transition duration-300 cursor-pointer">
@@ -61,7 +71,7 @@
             <!-- card section  -->
             <div class="h-[78%] overflow-y-scroll overflow-x-hidden">
                 <div class="card">
-                    <h1 class="news-title relative xl:left-24 left-16 mb-4 text-xl font-bold">general news !!</h1>
+                    <h1 class="news-type relative xl:left-24 left-16 mb-4 text-xl font-bold">general news !!</h1>
                     <div id="card-container" class="flex justify-center flex-wrap gap-6">
                         <div
                             class="card bg-white p-4 rounded-lg shadow-lg overflow-hidden transform transition-all hover:scale-105">
@@ -94,7 +104,7 @@
 
             <!-- footer section -->
             <div class="footer h-[9%] bg-gray-800 flex justify-center">
-                <h1 class=" relative top-5 text-lg text-white ">-----  power by @RAVI KARAN  ------- </h1>
+                <h1 class=" relative top-5 text-lg text-white ">----- power by @RAVI KARAN ------- </h1>
             </div>
         </div>
         <script src="./script/index.js"></script>
