--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
     </head>
 
     <body class="overflow-hidden ">
-        <div class="container w-screen h-screen bg-amber-200 ">
+        <div class="container  w-screen h-screen bg-amber-200 ">
 
             <!-- nav section -->
-            <nav class="w-full h-[10%] bg-blue-600 p-4 mb-[2%] ">
+            <nav class="w-full h-[10%] bg-blue-600 p-4">
                 <div class="flex justify-between items-center">
                     <!-- Logo Section -->
-                    <div class="text-white text-xl font-bold cursor-pointer">MyLogo</div>
+                    <div class="text-white text-xl font-bold cursor-pointer">
+                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPqEEI_x50vlET-ur5DsLdnNmprdM-L9HTUw&s"
+                            alt="logo" class="h-12 rounded-2xl">
+                    </div>
 
                     <!-- Nav Button Section -->
-                    <div class="flex space-x-7 nav-items">
+
+                    <div class="hidden md:flex space-x-7 nav-items">
                         <div data-value="top"
                             class="text-white nav-item hover:text-yellow-300 transition duration-300 cursor-pointer">
                             TOP
@@ -61,6 +65,7 @@
                         </div>
                     </div>
 
+
                     <!-- Search Section -->
                     <div class="relative nav-search">
                         <input type="text" class="p-2 rounded-full outline-none" placeholder="Search..." />
@@ -68,17 +73,20 @@
                 </div>
             </nav>
 
+
             <!-- card section  -->
-            <div class="h-[78%] overflow-y-scroll overflow-x-hidden">
+            <div class="h-[81%] overflow-y-scroll overflow-x-hidden ">
                 <div class="card">
-                    <h1 class="news-type relative xl:left-24 left-16 mb-4 text-xl font-bold">general news !!</h1>
-                    <div id="card-container" class="flex justify-center flex-wrap gap-6">
+                    <h1 class="news-type relative xl:left-24 left-5 mb-4 text-xl font-bold">general news !!</h1>
+                    <div id="card-container"
+                        class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 justify-center gap-6 px-4">
                         <div
                             class="card bg-white p-4 rounded-lg shadow-lg overflow-hidden transform transition-all hover:scale-105">
                             <img src="https://via.placeholder.com/300" alt="Card Image"
                                 class="w-full h-48 object-cover mb-4 rounded-lg">
                             <h3 class="text-lg font-semibold text-gray-800">Card Title</h3>
-                            <p class="text-gray-600 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <p class="text-gray-600 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
                             <button
                                 class=" cursor-pointer w-full py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition duration-300">Learn
                                 More</button>
