--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
                     <!-- Nav Button Section -->
 
-                    <div class="hidden md:flex space-x-7 nav-items">
+                    <div class="hidden lg:flex space-x-7 nav-items">
                         <div data-value="top"
                             class="text-white nav-item hover:text-yellow-300 transition duration-300 cursor-pointer">
                             TOP
@@ -79,7 +79,79 @@
                 <div class="card">
                     <h1 class="news-type relative xl:left-24 left-5 mb-4 text-xl font-bold">general news !!</h1>
                     <div id="card-container"
-                        class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 justify-center gap-6 px-4">
+                        class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 justify-center gap-6 px-4">
+                        <div
+                            class="card bg-white p-4 rounded-lg shadow-lg overflow-hidden transform transition-all hover:scale-105">
+                            <img src="https://via.placeholder.com/300" alt="Card Image"
+                                class="w-full h-48 object-cover mb-4 rounded-lg">
+                            <h3 class="text-lg font-semibold text-gray-800">Card Title</h3>
+                            <p class="text-gray-600 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
+                            <button
+                                class=" cursor-pointer w-full py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition duration-300">Learn
+                                More</button>
+                        </div>
+
+                        <div
+                            class="card bg-white p-4 rounded-lg shadow-lg overflow-hidden transform transition-all hover:scale-105">
+                            <img src="https://via.placeholder.com/300" alt="Card Image"
+                                class="w-full h-48 object-cover mb-4 rounded-lg">
+                            <h3 class="text-lg font-semibold text-gray-800">Card Title</h3>
+                            <p class="text-gray-600 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
+                            <button
+                                class=" cursor-pointer w-full py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition duration-300">Learn
+                                More</button>
+                        </div>
+
+                        <div
+                            class="card bg-white p-4 rounded-lg shadow-lg overflow-hidden transform transition-all hover:scale-105">
+                            <img src="https://via.placeholder.com/300" alt="Card Image"
+                                class="w-full h-48 object-cover mb-4 rounded-lg">
+                            <h3 class="text-lg font-semibold text-gray-800">Card Title</h3>
+                            <p class="text-gray-600 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
+                            <button
+                                class=" cursor-pointer w-full py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition duration-300">Learn
+                                More</button>
+                        </div>
+
+                        <div
+                            class="card bg-white p-4 rounded-lg shadow-lg overflow-hidden transform transition-all hover:scale-105">
+                            <img src="https://via.placeholder.com/300" alt="Card Image"
+                                class="w-full h-48 object-cover mb-4 rounded-lg">
+                            <h3 class="text-lg font-semibold text-gray-800">Card Title</h3>
+                            <p class="text-gray-600 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
+                            <button
+                                class=" cursor-pointer w-full py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition duration-300">Learn
+                                More</button>
+                        </div>
+
+                        <div
+                            class="card bg-white p-4 rounded-lg shadow-lg overflow-hidden transform transition-all hover:scale-105">
+                            <img src="https://via.placeholder.com/300" alt="Card Image"
+                                class="w-full h-48 object-cover mb-4 rounded-lg">
+                            <h3 class="text-lg font-semibold text-gray-800">Card Title</h3>
+                            <p class="text-gray-600 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
+                            <button
+                                class=" cursor-pointer w-full py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition duration-300">Learn
+                                More</button>
+                        </div>
+
+                        <div
+                            class="card bg-white p-4 rounded-lg shadow-lg overflow-hidden transform transition-all hover:scale-105">
+                            <img src="https://via.placeholder.com/300" alt="Card Image"
+                                class="w-full h-48 object-cover mb-4 rounded-lg">
+                            <h3 class="text-lg font-semibold text-gray-800">Card Title</h3>
+                            <p class="text-gray-600 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            </p>
+                            <button
+                                class=" cursor-pointer w-full py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition duration-300">Learn
+                                More</button>
+                        </div>
+
                         <div
                             class="card bg-white p-4 rounded-lg shadow-lg overflow-hidden transform transition-all hover:scale-105">
                             <img src="https://via.placeholder.com/300" alt="Card Image"
