--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container  w-screen h-screen bg-amber-200 ">
 
             <!-- nav section -->
-            <nav class="w-full h-[10%] bg-blue-600 p-4">
+            <nav class="w-full h-[10%] lg:h-[5%] xl:h-[10%] bg-blue-600 p-4">
                 <div class="flex justify-between items-center">
                     <!-- Logo Section -->
                     <div class="text-white text-xl font-bold cursor-pointer">
@@ -79,79 +79,7 @@
                 <div class="card">
                     <h1 class="news-type relative xl:left-24 left-5 mb-4 text-xl font-bold">general news !!</h1>
                     <div id="card-container"
-                        class="grid grid-cols-1 lg:grid-cols-2 xl:grid-cols-3 justify-center gap-6 px-4">
-                        <div
-                            class="card bg-white p-4 rounded-lg shadow-lg overflow-hidden transform transition-all hover:scale-105">
-                            <img src="https://via.placeholder.com/300" alt="Card Image"
-                                class="w-full h-48 object-cover mb-4 rounded-lg">
-                            <h3 class="text-lg font-semibold text-gray-800">Card Title</h3>
-                            <p class="text-gray-600 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            </p>
-                            <button
-                                class=" cursor-pointer w-full py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition duration-300">Learn
-                                More</button>
-                        </div>
-
-                        <div
-                            class="card bg-white p-4 rounded-lg shadow-lg overflow-hidden transform transition-all hover:scale-105">
-                            <img src="https://via.placeholder.com/300" alt="Card Image"
-                                class="w-full h-48 object-cover mb-4 rounded-lg">
-                            <h3 class="text-lg font-semibold text-gray-800">Card Title</h3>
-                            <p class="text-gray-600 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            </p>
-                            <button
-                                class=" cursor-pointer w-full py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition duration-300">Learn
-                                More</button>
-                        </div>
-
-                        <div
-                            class="card bg-white p-4 rounded-lg shadow-lg overflow-hidden transform transition-all hover:scale-105">
-                            <img src="https://via.placeholder.com/300" alt="Card Image"
-                                class="w-full h-48 object-cover mb-4 rounded-lg">
-                            <h3 class="text-lg font-semibold text-gray-800">Card Title</h3>
-                            <p class="text-gray-600 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            </p>
-                            <button
-                                class=" cursor-pointer w-full py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition duration-300">Learn
-                                More</button>
-                        </div>
-
-                        <div
-                            class="card bg-white p-4 rounded-lg shadow-lg overflow-hidden transform transition-all hover:scale-105">
-                            <img src="https://via.placeholder.com/300" alt="Card Image"
-                                class="w-full h-48 object-cover mb-4 rounded-lg">
-                            <h3 class="text-lg font-semibold text-gray-800">Card Title</h3>
-                            <p class="text-gray-600 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            </p>
-                            <button
-                                class=" cursor-pointer w-full py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition duration-300">Learn
-                                More</button>
-                        </div>
-
-                        <div
-                            class="card bg-white p-4 rounded-lg shadow-lg overflow-hidden transform transition-all hover:scale-105">
-                            <img src="https://via.placeholder.com/300" alt="Card Image"
-                                class="w-full h-48 object-cover mb-4 rounded-lg">
-                            <h3 class="text-lg font-semibold text-gray-800">Card Title</h3>
-                            <p class="text-gray-600 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            </p>
-                            <button
-                                class=" cursor-pointer w-full py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition duration-300">Learn
-                                More</button>
-                        </div>
-
-                        <div
-                            class="card bg-white p-4 rounded-lg shadow-lg overflow-hidden transform transition-all hover:scale-105">
-                            <img src="https://via.placeholder.com/300" alt="Card Image"
-                                class="w-full h-48 object-cover mb-4 rounded-lg">
-                            <h3 class="text-lg font-semibold text-gray-800">Card Title</h3>
-                            <p class="text-gray-600 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            </p>
-                            <button
-                                class=" cursor-pointer w-full py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition duration-300">Learn
-                                More</button>
-                        </div>
-
+                        class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 justify-center gap-6 px-4">
                         <div
                             class="card bg-white p-4 rounded-lg shadow-lg overflow-hidden transform transition-all hover:scale-105">
                             <img src="https://via.placeholder.com/300" alt="Card Image"
