--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link href="./src/index.css" rel="stylesheet">
     </head>
 
-    <body class="overflow-hidden ">
+    <body class=" ">
         <div class="container  w-screen h-screen bg-amber-200 ">
 
             <!-- nav section -->
