--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <link href="./src/index.css" rel="stylesheet">
     </head>
 
-    <body class="overflow-x-hidden">
+    <body class="overflow-hidden">
         <div class="w-full h-screen bg-amber-200">
 
             <!-- nav section -->
-            <nav class="w-full h-[10%] bg-blue-600 p-4">
+            <nav class="w-full h-[7%] bg-blue-600 p-4">
                 <div class="flex justify-between items-center">
                     <!-- Logo Section -->
-                    <div class="text-white text-xl font-bold cursor-pointer flex gap-3">
+                    <div class="text-white text-xl font-bold cursor-pointer flex gap-5">
                         <div class="lg:hidden flex items-center">
                             <button class="text-white text-3xl" onclick="toggleMobileNav()">☰</button>
                             <div class="absolute top-12 left-0 w-full bg-blue-600 text-white hidden mobile-nav">
@@ -89,7 +89,7 @@
             </nav>
 
             <!-- card section -->
-            <div class="h-[81%] overflow-y-scroll overflow-x-hidden">
+            <div class="h-[88%] overflow-y-scroll overflow-x-hidden">
                 <div class="card">
                     <h1 class="news-type relative xl:left-24 left-5 mb-4 text-xl font-bold">general news !!</h1>
                     <div id="card-container"
@@ -124,7 +124,7 @@
             </div>
 
             <!-- footer section -->
-            <div class="footer h-[9%] bg-gray-800 flex justify-center">
+            <div class="footer h-[5%] bg-gray-800 flex justify-center">
                 <h1 class="relative top-5 text-sm sm:text-lg text-center text-white">----- powered by @RAVI KARAN
                     ------- </h1>
             </div>
