--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="w-full h-screen bg-amber-200">
 
             <!-- nav section -->
-            <nav class="w-full h-[7%] bg-blue-600 p-4">
+            <nav class="w-full h-[7%] lg:h-[10%] bg-blue-600 p-4 ">
                 <div class="flex justify-between items-center">
                     <!-- Logo Section -->
                     <div class="text-white text-xl font-bold cursor-pointer flex gap-5">
@@ -89,11 +89,11 @@
             </nav>
 
             <!-- card section -->
-            <div class="h-[88%] overflow-y-scroll overflow-x-hidden">
+            <div class="h-[88%] lg:h-[81%] overflow-y-scroll overflow-x-hidden pt-4">
                 <div class="card">
-                    <h1 class="news-type relative xl:left-24 left-5 mb-4 text-xl font-bold">general news !!</h1>
+                    <h1 class="news-type relative xl:left-24 left-5 my-4 text-xl font-bold">general news !!</h1>
                     <div id="card-container"
-                        class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 justify-center gap-6 px-4">
+                        class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 justify-center gap-6 ">
                         <div
                             class="card bg-white p-4 rounded-lg shadow-lg overflow-hidden transform transition-all hover:scale-105">
                             <img src="https://via.placeholder.com/300" alt="Card Image"
@@ -124,7 +124,7 @@
             </div>
 
             <!-- footer section -->
-            <div class="footer h-[5%] bg-gray-800 flex justify-center">
+            <div class="footer h-[7%] lg:h-[9%] bg-gray-800 flex justify-center">
                 <h1 class="relative top-5 text-sm sm:text-lg text-center text-white">----- powered by @RAVI KARAN
                     ------- </h1>
             </div>
