--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link href="./src/index.css" rel="stylesheet">
     </head>
 
-    <body class="overflow-hidden">
+    <body class="overflow-x-hidden">
         <div class="w-full h-screen bg-amber-200">
 
             <!-- nav section -->
@@ -89,7 +89,7 @@
             </nav>
 
             <!-- card section -->
-            <div class="h-[86%] lg:h-[81%] overflow-y-scroll overflow-x-hidden pt-4">
+            <div class="h-[86%] lg:h-[82%] overflow-y-scroll overflow-x-hidden pt-4">
                 <div class="card">
                     <h1 class="news-type relative xl:left-24 left-5 my-4 text-xl font-bold">general news !!</h1>
                     <div id="card-container"
