--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <link href="./src/index.css" rel="stylesheet">
     </head>
 
-    <body class="overflow-x-hidden">
+    <body class="overflow-hidden">
         <div class="w-full h-screen bg-amber-200">
 
             <!-- nav section -->
             <nav class="w-full h-[7%] lg:h-[10%] bg-blue-600 p-4 ">
                 <div class="flex justify-between items-center">
                     <!-- Logo Section -->
-                    <div class="text-white text-xl font-bold cursor-pointer flex gap-5">
+                    <div class="text-white text-xl font-bold cursor-pointer flex gap-10">
                         <div class="lg:hidden flex items-center">
                             <button class="text-white text-3xl" onclick="toggleMobileNav()">☰</button>
                             <div class="absolute top-12 left-0 w-full bg-blue-600 text-white hidden mobile-nav">
@@ -37,7 +37,7 @@
                             </div>
                         </div>
                         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTPqEEI_x50vlET-ur5DsLdnNmprdM-L9HTUw&s"
-                            alt="logo" class="h-12 rounded-2xl">
+                            alt="logo" class="lg:h-12 h-16 rounded-2xl">
                     </div>
 
                     <!-- Nav Button Section (Large Screens) -->
