--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
             <!-- card section -->
             <div class="h-[80%] lg:h-[82%] overflow-y-scroll overflow-x-hidden pt-4">
-                <div class="card">
+                <div class="cards">
                     <h1 class="news-type relative xl:left-24 left-5 my-4 text-xl font-bold">general news !!</h1>
                     <div id="card-container"
                         class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 justify-center gap-6 ">
@@ -120,7 +120,7 @@
                     </div>
                 </div>
 
-                <div id="full-news-container" class="w-[90%] mx-auto mt-10 hidden"></div>
+                <div id="full-news-container" class="w-[90%] mx-auto my-10 hidden "></div>
             </div>
 
             <!-- footer section -->
